--- a/lms/src/main/resources/templates/PI/myPage/viewPaymentLecture.html
+++ b/lms/src/main/resources/templates/PI/myPage/viewPaymentLecture.html
@@ -9,9 +9,93 @@
 
 <!-- index.html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
+<script>
+$(document).ready(function(){	
+	// 강의공고 등록하기 버튼 클릭시 이벤트 처리
+	$('#insert').click(function(){
+		console.log('#insert click test');
+		// 강의공고코드, 생년월일로 강의신청 중복검사 (비동기)
+		let noticeLectureCode = $('#noticeLectureCode').val();
+		let memberRegistrationNumberFront = $('#memberRegistrationNumberFront').val();
+		
+		$.ajax({
+			url:'/PI/lectureSignupCheck'
+			,data: {noticeLectureCode:noticeLectureCode, memberRegistrationNumberFront:memberRegistrationNumberFront}
+			,type:'Post'
+			,dataType:'json'
+			,success:function(result){
+				if(result){
+				alert('수강신청 이력이 존재합니다. 해당강의는 수강신청 하실 수 없습니다');
+				location.href='/PI/PIIndex'
+				} else{
+					alert('수강신청이 완료되었습니다. 수강신청결과 확인 후 결제하여주십시오');
+					$('#addLectureSignup').submit();
+				}
+			}
+		});		
+	});
+});
+</script>
 </th:block>
 
 <div layout:fragment="content">
-<h3 th:text="'안녕하세요 '+${institutionName}+' 입니다.'"></h3>
+<h1>수강신청 등록하기</h1>
+<h4>수강 정보가 다음과 일치하면 신청 버튼을 클릭하여 주십시오</h4>
+<form id="addLectureSignup" action="/PI/lecture/viewLectureSignup" method="post">
+	<div class="form-group">
+		<label>강의공고명</label>
+		<div class="row">
+			<div class="col-sm-6">
+				<input class="form-control" th:value="${noticeLectureTitle}" name="noticeLectureTitle" readonly="readonly">
+			</div>
+			<div class="col-sm-6">			
+				<input hidden="hidden" th:value="${noticeLectureCode}" id="noticeLectureCode" name="noticeLectureCode">
+			</div>
+		</div>
+	</div>
+	<div class="form-group">
+		<label>교육원명</label>	
+		<div class="row">
+			<div class="col-sm-4">
+				<input class="form-control" th:value="${institutionName}" name="institutionName" readonly="readonly">
+			</div>
+			<div class="col-sm-8">			
+				<input hidden="hidden" th:value="${institutionCode}" name="institutionCode">
+			</div>
+		</div>		
+	</div>
+	<div class="form-group">
+		<div class="row">
+			<div class="col-sm-4">
+				<label>회원명</label>	
+				<input class="form-control" th:value="${memberName}" name="memberName" readonly="readonly">
+			</div>
+			<div class="col-sm-4">
+				<label>생년월일</label>	
+				<input class="form-control" th:value="${memberRegistrationNumberFront}" id= "memberRegistrationNumberFront" name="memberRegistrationNumberFront" readonly="readonly">
+			</div>
+			<div class="col-sm-4">			
+				<input hidden="hidden" th:value="${memberCode}" name="memberCode">
+			</div>
+		</div>		
+	</div>
+	<div class="form-group">
+		<div class="row">
+			<div class="col-sm-4">
+				<label>강의시작일자</label>	
+				<input type="date" readonly="readonly" class="form-control" th:value="${noticeLectureStartDate}" name="noticeLectureStartDate">
+			</div>
+			<div class="col-sm-4">		
+				<label>강의종료일자</label>		
+				<input type="date" readonly="readonly" class="form-control" th:value="${noticeLectureEndDate}" name="noticeLectureEndDate">
+			</div>
+			<div class="col-sm-4">			
+				<input hidden="hidden">
+			</div>
+		</div>		
+	</div>
+	
+	<button id="insert" type="button">수강신청</button>	
+</form>
 </div>
 </html>
